k8s/overlays/local/patches/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-journey
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
