k8s/overlays/local/patches/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops-journey
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
